Fix: together with 29516d583daeee5fcc08dde7a5ea20c0160cc640 , fixes scrollbar in IE.

--- a/less/rflectcalendar.less
+++ b/less/rflectcalendar.less
@@ -4,6 +4,7 @@
 
 html {
   height: 100%;
+  overflow: hidden;
 }
 
 /*
@@ -22,7 +23,6 @@ body {
   min-width: 320px;
   min-height: 376px; /* -8px of .main-body margin-top.*/
   background-color: rgb(246,246,246);
-  overflow-x: hidden;
 }
 
 body when (@UI_TYPE = 'MOBILE') {
